--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family:
     system-ui,
@@ -76,6 +80,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 body > main {
