--- a/app/components/ServiceGrid.css
+++ b/app/components/ServiceGrid.css
@@ -17,7 +17,10 @@ html, body {
     max-width: 100vw;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+    margin-bottom: 0;
     padding: 0;
+    border: none;
+    border-bottom: none;
   }
   
   
@@ -25,6 +28,8 @@ html, body {
     min-height: 480px;
   
     border-radius: 0;
+    border: none;
+    border-bottom: none;
     padding: 40px;
   
     cursor: pointer;
